Fix hero gap

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -22,8 +22,8 @@ body {
   font-family: "Roboto", sans-serif;
   background-color: var(--dark);
   background-size: cover;
+  background-position: center;
   background-attachment: fixed;
-  -webkit-background-attachment: fixed;
   color: var(--text);
 }
 
@@ -61,6 +61,7 @@ main {
   max-width: 80%;
   flex-direction: column;
   justify-content: space-between;
+  gap: 2rem;
   min-height: 50%;
   padding: 1.5rem;
   backdrop-filter: blur(0.7rem);
